validate email in footer

--- a/index.html
+++ b/index.html
@@ -250,10 +250,10 @@
             </div>
             <div class="col-12 col-lg-4 text-center">
               <h2>NEWSLETTER</h2>
-              <div class="footer__search">
-                <input type="text" placeholder="Email" />
-                <button>GO</button>
-              </div>
+              <form class="footer__search">
+                <input type="email" placeholder="Email" name="email" />
+                <button type="submit">GO</button>
+              </form>
               <div class="footer__social">
                 <a href="https://www.twitter.com"
                   ><i class="fab fa-twitter"></i
