fix scroll menu desktop

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
                 <div class="row">
                   <div class="col-auto">
                     <ul class="menu__list">
-                      <li><a href="">HOME</a></li>
+                      <li><a class="scroll" href="">HOME</a></li>
                       <li>
-                        <a href="">ROOMS</a>
+                        <a class="scroll" href="">ROOMS</a>
                         <ul>
                           <li class="menu_2nd">
                             <a href="">Room List</a>
@@ -88,7 +88,7 @@
                         </ul>
                       </li>
                       <li>
-                        <a href="">PAGES</a>
+                        <a class="scroll" href="">PAGES</a>
                         <ul>
                           <li class="menu_2nd-none"><a href="">About Us</a></li>
                           <li class="menu_2nd-none"><a href="">Gallery</a></li>
@@ -107,7 +107,7 @@
                         </ul>
                       </li>
                       <li>
-                        <a href="#">BLOG</a>
+                        <a class="scroll" href="#">BLOG</a>
                         <ul>
                           <li class="menu_2nd">
                             <a href="">Masonry</a>
@@ -136,7 +136,7 @@
                         </ul>
                       </li>
                       <li>
-                        <a href="#">PORTFOLIO</a>
+                        <a class="scroll" href="#">PORTFOLIO</a>
                         <ul>
                           <li class="menu_2nd">
                             <a href="">Gallery</a>
@@ -166,7 +166,7 @@
                         </ul>
                       </li>
                       <li>
-                        <a href="#">ELEMENTS</a>
+                        <a class="scroll" href="#">ELEMENTS</a>
                         <ul>
                           <li class="menu_2nd-none"><a href="">About Us</a></li>
                           <li class="menu_2nd-none"><a href="">Gallery</a></li>
@@ -213,7 +213,7 @@
       <div class="container">
         <div class="footer__main">
           <div class="row">
-            <div class="col-12 col-lg-4 text-center">
+            <div class="col-12 col-lg-4 d-flex flex-column">
               <h2>CONTACT</h2>
               <a
                 href="https://www.google.com/maps/place/Greenwich+Village,+New+York,+NY,+USA/@40.7337621,-74.0095604,15z/data=!3m1!4b1!4m13!1m7!3m6!1s0x89c24fa5d33f083b:0xc80b8f06e177fe62!2sNew+York,+NY,+USA!3b1!8m2!3d40.7127753!4d-74.0059728!3m4!1s0x89c259940c3213a7:0x8882c42182df455f!8m2!3d40.7335719!4d-74.0027418?_ga=2.153491768.1616392348.1616635257-1602379502.1616635257"
