fix lỗi aos, footer...

--- a/contact.html
+++ b/contact.html
@@ -539,7 +539,10 @@
     <!-- Main JS-->
     <script src="./js/main.js"></script>
     <script>
-      AOS.init();
+      AOS.init({
+        offset: 400,
+        duration: 1000,
+      });
     </script>
   </body>
 </html>
