--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
             <!-- menu main -->
             <div class="header__menu-list">
               <ul class="menu-main">
-                <li class="scroll"><a href="index.html">HOME</a></li>
-                <li class="scroll">
-                  <a href="#">ROOMS</a>
+                <li><a class="scroll" href="index.html">HOME</a></li>
+                <li>
+                  <a class="scroll" href="#">ROOMS</a>
                   <ul>
                     <li>
                       <a href="#">Room list</a>
@@ -92,8 +92,8 @@
                     </li>
                   </ul>
                 </li>
-                <li class="scroll">
-                  <a href="#">PAGES</a>
+                <li>
+                  <a class="scroll" href="#">PAGES</a>
                   <ul>
                     <li><a href=" about.html">About Us</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
@@ -103,8 +103,8 @@
                     <li><a href="404.html">404 Error Page</a></li>
                   </ul>
                 </li>
-                <li class="scroll">
-                  <a href="#">BLOG</a>
+                <li>
+                  <a class="scroll" href="#">BLOG</a>
                   <ul>
                     <li>
                       <a href="#">Masonry</a>
@@ -135,8 +135,8 @@
                     </li>
                   </ul>
                 </li>
-                <li class="scroll"><a href="#">PORTFOLIO</a></li>
-                <li class="scroll"><a href="#">ELEMENTS</a></li>
+                <li><a class="scroll" href="#">PORTFOLIO</a></li>
+                <li><a class="scroll" href="#">ELEMENTS</a></li>
               </ul>
             </div>
             <!-- end main -->
@@ -312,7 +312,7 @@
             ><img src="./images/banner/banner-01.jpeg" alt="banner web"
           /></a>
           <div class="banner__item-text">
-            <h1 data-aos="fade-up">Bed and Breakfast</h1>
+            <h1>Bed and Breakfast</h1>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, <br />
               sed do eiusmod tempor incididunt ut labore et dolore mag.
@@ -324,7 +324,7 @@
             ><img src="./images/banner/banner-02.jpeg" alt="banner web"
           /></a>
           <div class="banner__item-text">
-            <h1 data-aos="fade-up">Bed and Breakfast</h1>
+            <h1>Bed and Breakfast</h1>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, <br />
               sed do eiusmod tempor incididunt ut labore et dolore mag.
@@ -923,7 +923,7 @@
       integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
       crossorigin="anonymous"
     ></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
     <script src="./plugins/masonry/masonry.pkgd.js"></script>
     <script src="./plugins/masonry/imagesloaded.pkgd.js"></script>
     <script src="./plugins/fontawesome/all.js"></script>
@@ -931,10 +931,19 @@
     <script src="./plugins/validation1.19.3/jquery.validate.min.js"></script>
     <script src="./plugins/rating/rating.js"></script>
     <script src="./plugins/slick/slick.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- Main JS-->
     <script src="./js/main.js"></script>
     <script>
-      AOS.init();
+      AOS.init({
+        offset: 400,
+        duration: 1000,
+      });
+      document.onreadystatechange = function () {
+        if (document.readyState == "complete") {
+          AOS.refresh();
+        }
+      };
     </script>
   </body>
 </html>
