--- a/about.html
+++ b/about.html
@@ -500,14 +500,14 @@
               <div class="story__list--adobe">
                 <div class="story__list-percentFeatures"></div>
               </div>
-              <span class="count">96</span>
+              <span class="count" id="features">96</span>
             </div>
             <div class="story__list">
               <h1>PHP, JS PROGRAMMING</h1>
               <div class="story__list--adobe">
                 <div class="story__list-percentPHP"></div>
               </div>
-              <span class="count">77</span>
+              <span class="count" id="PHP">77</span>
             </div>
           </div>
         </div>
