add blog detail page

--- a/standard-room-list.html
+++ b/standard-room-list.html
@@ -330,7 +330,7 @@
                   <div class="col-12 col-lg-6">
                     <div class="rooms__item">
                       <div class="rooms__img">
-                        <a href="#"
+                        <a href="single-room.html"
                           ><img
                             src="./images/roomlist/roomlist-01.jpeg"
                             alt="rooms list"
@@ -348,7 +348,7 @@
                         >
                       </div>
                       <div class="rooms__content">
-                        <a href="#"><h1>DOUBLE APARTMENT</h1></a>
+                        <a href="single-room.html"><h1>DOUBLE APARTMENT</h1></a>
                         <div class="rooms__line"></div>
                         <p class="rooms__padding">
                           Donec quam felis, ultricies nec, pellentesque eu,
@@ -356,14 +356,14 @@
                           Donec pede justo, fringilla vel, aliquet nec,
                           vulputate eget, arcu.
                         </p>
-                        <a href="#"><button>Check Details</button></a>
+                        <a href="single-room.html"><button>Check Details</button></a>
                       </div>
                     </div>
                   </div>
                   <div class="col-12 col-lg-6">
                     <div class="rooms__item">
                       <div class="rooms__img">
-                        <a href="#"
+                        <a href="single-room.html"
                           ><img
                             src="./images/roomlist/roomlist-02.jpeg"
                             alt="rooms list"
@@ -381,7 +381,7 @@
                         >
                       </div>
                       <div class="rooms__content">
-                        <a href="#"><h1>DOUBLE APARTMENT</h1></a>
+                        <a href="single-room.html"><h1>DOUBLE APARTMENT</h1></a>
                         <div class="rooms__line"></div>
                         <p class="rooms__padding">
                           Donec quam felis, ultricies nec, pellentesque eu,
@@ -389,14 +389,14 @@
                           Donec pede justo, fringilla vel, aliquet nec,
                           vulputate eget, arcu.
                         </p>
-                        <a href="#"><button>Check Details</button></a>
+                        <a href="single-room.html"><button>Check Details</button></a>
                       </div>
                     </div>
                   </div>
                   <div class="col-12 col-lg-6">
                     <div class="rooms__item">
                       <div class="rooms__img">
-                        <a href="#"
+                        <a href="single-room.html"
                           ><img
                             src="./images/roomlist/roomlist-03.jpeg"
                             alt="rooms list"
@@ -414,7 +414,7 @@
                         >
                       </div>
                       <div class="rooms__content">
-                        <a href="#"><h1>DOUBLE APARTMENT</h1></a>
+                        <a href="single-room.html"><h1>DOUBLE APARTMENT</h1></a>
                         <div class="rooms__line"></div>
                         <p class="rooms__padding">
                           Donec quam felis, ultricies nec, pellentesque eu,
@@ -422,14 +422,14 @@
                           Donec pede justo, fringilla vel, aliquet nec,
                           vulputate eget, arcu.
                         </p>
-                        <a href="#"><button>Check Details</button></a>
+                        <a href="single-room.html"><button>Check Details</button></a>
                       </div>
                     </div>
                   </div>
                   <div class="col-12 col-lg-6">
                     <div class="rooms__item">
                       <div class="rooms__img">
-                        <a href="#"
+                        <a href="single-room.html"
                           ><img
                             src="./images/roomlist/roomlist-04.jpeg"
                             alt="rooms list"
@@ -447,7 +447,7 @@
                         >
                       </div>
                       <div class="rooms__content">
-                        <a href="#"><h1>DOUBLE APARTMENT</h1></a>
+                        <a href="single-room.html"><h1>DOUBLE APARTMENT</h1></a>
                         <div class="rooms__line"></div>
                         <p class="rooms__padding">
                           Donec quam felis, ultricies nec, pellentesque eu,
@@ -455,14 +455,14 @@
                           Donec pede justo, fringilla vel, aliquet nec,
                           vulputate eget, arcu.
                         </p>
-                        <a href="#"><button>Check Details</button></a>
+                        <a href="single-room.html"><button>Check Details</button></a>
                       </div>
                     </div>
                   </div>
                   <div class="col-12 col-lg-6">
                     <div class="rooms__item">
                       <div class="rooms__img">
-                        <a href="#"
+                        <a href="single-room.html"
                           ><img
                             src="./images/roomlist/roomlist-05.jpeg"
                             alt="rooms list"
@@ -480,7 +480,7 @@
                         >
                       </div>
                       <div class="rooms__content">
-                        <a href="#"><h1>DOUBLE APARTMENT</h1></a>
+                        <a href="single-room.html"><h1>DOUBLE APARTMENT</h1></a>
                         <div class="rooms__line"></div>
                         <p class="rooms__padding">
                           Donec quam felis, ultricies nec, pellentesque eu,
@@ -488,14 +488,14 @@
                           Donec pede justo, fringilla vel, aliquet nec,
                           vulputate eget, arcu.
                         </p>
-                        <a href="#"><button>Check Details</button></a>
+                        <a href="single-room.html"><button>Check Details</button></a>
                       </div>
                     </div>
                   </div>
                   <div class="col-12 col-lg-6">
                     <div class="rooms__item">
                       <div class="rooms__img">
-                        <a href="#"
+                        <a href="single-room.html"
                           ><img
                             src="./images/roomlist/roomlist-06.jpeg"
                             alt="rooms list"
@@ -513,7 +513,7 @@
                         >
                       </div>
                       <div class="rooms__content">
-                        <a href="#"><h1>DOUBLE APARTMENT</h1></a>
+                        <a href="single-room.html"><h1>DOUBLE APARTMENT</h1></a>
                         <div class="rooms__line"></div>
                         <p class="rooms__padding">
                           Donec quam felis, ultricies nec, pellentesque eu,
@@ -521,7 +521,7 @@
                           Donec pede justo, fringilla vel, aliquet nec,
                           vulputate eget, arcu.
                         </p>
-                        <a href="#"><button>Check Details</button></a>
+                        <a href="single-room.html"><button>Check Details</button></a>
                       </div>
                     </div>
                   </div>
